--- a/manifest.json
+++ b/manifest.json
@@ -6,11 +6,13 @@
   "background_color": "#1e1e2e",
   "theme_color": "#1e1e2e",
   "orientation": "portrait",
+  "scope": "/",
   "icons": [
     {
-      "src": "data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 512 512'%3E%3Crect width='512' height='512' rx='120' fill='%231e1e2e'/%3E%3Cpath d='M140 256C140 160 372 160 372 256C372 352 140 352 140 256' stroke='%23cba6f7' stroke-width='48' fill='none' stroke-linecap='round'/%3E%3Ccircle cx='256' cy='256' r='48' fill='%23f5c2e7'/%3E%3C/svg%3E",
-      "sizes": "192x192 512x512",
-      "type": "image/svg+xml"
+      "src": "icon.svg",
+      "sizes": "any",
+      "type": "image/svg+xml",
+      "purpose": "any maskable"
     }
   ]
 }
